<resources>

    <string name="app_name">MineSweeper</string>
    <string name="choose_difficulty">Please choose difficulty:</string>
    <string name="last_mode_played">Last difficulty played:</string>
    <string name="screen_size">Screen size:</string>
    <string name="num_mines">Number of mines:</string>
    <string name="start_game">Start!</string>
    <string name="leader_board">LeaderBoard</string>
    <string name="score">Score:</string>
    <string name="flags">Flags:</string>
    <string name="quit">Quit</string>
    <string name="result">Result:</string>
    <string name="end_activity_time">Time:</string>
    <string name="num_of_correct_cubes">Number of correct cubes:</string>
    <string name="num_of_correct_flags">Number of correct flags:</string>
    <string name="try_again">Try Again?</string>
    <string name="lost_text">you have lost</string>
    <string name="won_text">you have won</string>
    <string name="play_activity_time">Time:</string>
    <string name="not_played_yet">not played yet</string>
    <string name="leader_board_easy">Easy</string>
    <string name="leader_board_medium">Medium</string>
    <string name="leader_board_hard">Hard</string>
    <string name="leader_board_rank">Rank</string>
    <string name="leader_board_name">Name</string>
    <string name="leader_board_score">Score</string>
    <string name="leader_board_time">Time</string>
    <string name="maps_notification_error">Please install google maps to use this feature</string>
    <string name="new_leader">Congrats! you made it to the leader Board!</string>


    <string-array name="difficulties_array">

        <item>Easy</item>
        <item>Intermediate</item>
        <item>Hard</item>

    </string-array>

</resources>
