<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.amit.minesweeper.MainActivity"
    android:layout_margin="@dimen/margin_default">


    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/result"
        android:textSize="@dimen/text_default"
        android:layout_weight="2" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/end_activity_time"
        android:textSize="@dimen/text_default"
        android:layout_weight="2" />

    <TextView
        android:id="@+id/num_of_good_cubes"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/num_of_correct_cubes"
        android:textSize="@dimen/text_default"
        android:layout_weight="2" />

    <TextView
        android:id="@+id/num_of_good_flags"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/num_of_correct_flags"
        android:textSize="@dimen/text_default"
        android:layout_weight="2" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/try_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/try_again"
            android:layout_marginLeft="@dimen/far_margin"
            android:textColor="#FFFFFFFF" />

        <Button
            android:id="@+id/button_leader_board"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leader_board"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/close_margin"
            android:textColor="#FFFFFFFF" />
    </RelativeLayout>

</LinearLayout>
