<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.amit.minesweeper.LeaderBoardActivity">

    <RelativeLayout
        android:id="@+id/leader_board_difficulty"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"

        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/difficulty_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/margin_default">

            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/leader_board_easy" />
            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/leader_board_medium"/>
            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/leader_board_hard"/>
        </RadioGroup>

        <LinearLayout
            android:id="@+id/leader_board_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/difficulty_radio_group"
            android:layout_margin="@dimen/text_default">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/leader_board_rank"
                android:textSize="@dimen/text_default" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_default"
                android:text="@string/leader_board_name"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_default"
                android:text="@string/leader_board_score"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_default"
                android:text="@string/leader_board_time"/>

        </LinearLayout>

        <ScrollView
            android:id="@+id/leader_board_scroll_scores"
            android:layout_below="@id/leader_board_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ScrollView>


    </RelativeLayout>

    <FrameLayout
        android:id="@+id/mapsPlaceHolder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </FrameLayout>

</LinearLayout>
