<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.amit.minesweeper.MainActivity"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/choose_difficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_difficulty"
        android:textSize="20sp" />


    <Spinner
        android:id="@+id/difficulty_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/choose_difficulty"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp">

    </Spinner>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/difficulty_spinner"
        android:layout_marginTop="16dp">


        <TextView
            android:id="@+id/screen_size"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/screen_size"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/num_mines"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:text="@string/num_mines"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/last_mode_played"
            android:textSize="20sp"
            android:layout_weight="3" />

    </LinearLayout>

    <Button
        android:id="@+id/button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_game"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:textColor="#FFFFFFFF" />


</android.widget.RelativeLayout>
