<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.amit.minesweeper.PlayActivity"
    android:layout_margin="@dimen/margin_default">

    <LinearLayout
        android:id="@+id/headline_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textSize="@dimen/text_default"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/flags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flags"
            android:textSize="@dimen/text_default"
            android:layout_weight="1"/>


    </LinearLayout>

    <Button
        android:id="@+id/button_quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quit"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:textColor="#FFFFFFFF" />

    <com.yalantis.starwars.TilesFrameLayout
        android:id="@+id/tiles_frame_layout"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_above="@id/button_quit"
        android:layout_below="@id/headline_layout"
        app:sw_animationDuration="1500"
        app:sw_numberOfTilesX="35">


    <GridLayout
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_default">


    </GridLayout>
</com.yalantis.starwars.TilesFrameLayout>


<TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_quit"
        android:layout_centerInParent="true"
        android:layout_margin="0dp"
        android:textSize="@dimen/text_default"
        android:text="@string/play_activity_time"/>


</RelativeLayout>
